code to identify Drosophila species by COX1 mapping reads

--- a/host_mapping_reads/nextflow.config
+++ b/host_mapping_reads/nextflow.config
@@ -41,6 +41,7 @@ params {
   transcriptome_fasta    = "${params.refseq_dir}/Drosophila_melanogaster.BDGP6.32.cdna.all.fa.gz"
   // rRNA_fasta             = "${params.refseq_dir}/rRNA_locus.fa"
   rRNA_fasta             = "${params.refseq_dir}/B2_A5.fasta"
+  species_id_fasta       = "${params.refseq_dir}/co1.fasta"
 
   // min mapping quality of a read to be included in mismatch tabulation
   min_mismatch_map_q_score = 30
@@ -155,7 +156,7 @@ process {
   // low memory processes that use multi-threading
   // like bowtie2
   withLabel: 'lowmem_threaded' {
-    maxForks = 6
+    maxForks = 8
     cpus = 8
   }
 
@@ -175,9 +176,6 @@ profiles {
 
   local {
     exector.name = 'local'
-    executor.queueSize = 24
-    executor.cpus = 48
-    executor.memory = '256 GB'
     // if the pipeline has to access system paths outside of $HOME, $PWD, etc 
     // have to bind those paths to singularity.
     // see: https://sylabs.io/guides/latest/user-guide/bind_paths_and_mounts.html
