--- a/host_mapping_reads/nextflow.config
+++ b/host_mapping_reads/nextflow.config
@@ -91,6 +91,10 @@ params {
   // min bowtie alignment score to be considered a host-derived read
   host_bt_min_score = "60"
 
+  // miniminum mapping quality for a co1-mapping read to be considered 
+  // for host species assignment
+  min_species_id_mapq = 20
+
   // -------------------------
   // BLAST and classification
   // -------------------------
