--- a/quantify_strand_bias/conf/modules.config
+++ b/quantify_strand_bias/conf/modules.config
@@ -32,88 +32,11 @@ process {
     }
 }
 
-// CUTADAPT options
-process {
-    withName: 'TRIM_READS' {
-        // trimming args applied to single-end and paired-end data
-        ext.args   = [
-                "-q 30,30",
-                "--minimum-length ${params.post_trim_min_length}",
-                "-a file:${params.adapters_3p}",
-                "-g file:${params.adapters_5p}",
-                "-u ${params.always_trim_5p_bases}",
-                "-u -${params.always_trim_3p_bases}",
-            ].join(' ').trim()
-        // paired-end trimming args
-        ext.args2  = [
-                "-A file:${params.adapters_3p}",
-                "-G file:${params.adapters_5p}",
-                "-U ${params.always_trim_5p_bases}",
-                "-U -${params.always_trim_3p_bases}"
-            ].join(' ').trim()
-        publishDir = [
-            [
-                path: { "${params.outdir}/cutadapt" },
-                mode: params.publish_dir_mode,
-                pattern: "*.log"
-            ]
-        ]
-    }
-}
-
-// CD_HIT_EST options
-process {
-    withName: 'CD_HIT_EST' {
-        ext.args   = [
-                "-c ${params.dedup_percent_id}"
-            ].join(' ').trim()
-        publishDir = [
-            [
-                path: { "${params.outdir}/cd-hit" },
-                mode: params.publish_dir_mode,
-                pattern: "*.log"
-            ]
-        ]
-    }
-}
-
-/*
-// CD-HIT-DUP options
-process {
-    withName: 'CD-HIT-DUP' {
-        ext.args   = [
-                "-u ${params.dedup_prefix_length}",
-                "-e ${params.dedup_mismatches_allowed}"
-            ].join(' ').trim()
-        publishDir = [
-            [
-                path: { "${params.outdir}/cd-hit-dup" },
-                mode: params.publish_dir_mode,
-                pattern: "*.log"
-            ]
-        ]
-    }
-}
-*/
-
-process {
-  withName: 'FASTQC_POST_TRIM' {
-    ext.prefix = { "${meta.id}.trim" }
-  }
-}
-
-process {
-  withName: 'FASTQC_POST_COLLAPSE' {
-    ext.prefix = { "${meta.id}.uniq" }
-  }
-}
-
 process {
   withLabel: "no_publish_output" {
     publishDir = []
   }
 }
-
 
 process {
   withName: 'PROCESS_FASTQ_COUNTS' {
@@ -125,50 +48,9 @@ process {
   }
 }
 
-/*
 process {
-  withName: 'FILTER_UNMAPPED_READS' {
-    ext.prefix = { "${meta.id}.filt_unmapped" }
-    ext.args   = [
-                  "--exclude-flags 0x4"
-                 ].join(' ').trim()
-    publishDir = [
-        path: { "${params.outdir}" } ,
-        mode: params.publish_dir_mode,
-        saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
-    ]
-  }
-  withName: 'FILTER_EMPTY_BAM' {
-    ext.prefix = { "${meta.id}.filt" }
+  withName: 'PROCESS_STRAND_BIAS_OUTPUT' {
+     ext.when = !params.skip_final_analyses
   }
 }
-*/
-
-/*
-process {
-  withName: 'PROCESS_ALFA_OUTPUT' {
-    publishDir = [
-        path: { "${params.outdir}" } ,
-        mode: params.publish_dir_mode,
-        saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
-    ]
-  }
-}
-*/
-
-// output main output files to main results directory
-/*
-process {
-  withName: 'MAKE_SEGMENT_TABLE' {
-    publishDir = [
-        [
-            path: { "${params.outdir}" },
-            mode: params.publish_dir_mode,
-            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
-        ]
-    ]
-  }
-}
-*/
-
 
