--- a/quantify_strand_bias/nextflow.config
+++ b/quantify_strand_bias/nextflow.config
@@ -41,6 +41,7 @@ params {
   genome_fasta           = null
   genome_annotation_gtf  = null
   metadata               = "${params.refseq_dir}/metadata.csv"
+  refseq_metadata        = "${baseDir}/virus_refseq/refseq_metadata.csv"
   transcriptome_fasta    = "${params.refseq_dir}/Drosophila_melanogaster.BDGP6.32.cdna.all.fa.gz"
   rRNA_fasta             = "${params.refseq_dir}/rRNA_locus.fa"
 
@@ -111,6 +112,10 @@ params {
   nt_blast_db = "${params.blast_db_dir}/nt"
   nr_blast_db = "${params.blast_db_dir}/nr"
   nr_diamond_db = "${params.blast_db_dir}/nr.dmnd"
+
+
+  skip_final_analyses = false
+
 
   // singularity_pull_docker_container option
   //
