approaching as-submitted versions

--- a/host_mapping_reads/nextflow.config
+++ b/host_mapping_reads/nextflow.config
@@ -17,6 +17,12 @@ params {
   // collapse duplicate reads in input fastq?
   collapse_duplicate_reads  = false
 
+  // what additional R packages do we need to install on top of tidyverse?
+  R_packages                = "rstatix ggpubr patchwork"
+
+  // a directory with some additional common R scripts
+  R_shared_script_dir       = "../scripts/"
+
   initial_fastqc_dir    = "${params.outdir}/initial_fastqc/"
   post_trim_fastqc_dir  = "${params.outdir}/post_trim_fastqc/"
   host_filtered_out_dir = "${params.outdir}/host_filtered_fastq/"
@@ -37,7 +43,8 @@ params {
 
   genome_fasta           = null
   genome_annotation_gtf  = null
-  metadata               = "${params.refseq_dir}/metadata.csv"
+  // metadata               = "${params.refseq_dir}/metadata.csv"
+  metadata_dir           = "../metadata/"
   transcriptome_fasta    = "${params.refseq_dir}/Drosophila_melanogaster.BDGP6.32.cdna.all.fa.gz"
   // rRNA_fasta             = "${params.refseq_dir}/rRNA_locus.fa"
   rRNA_fasta             = "${params.refseq_dir}/B2_A5.fasta"
