--- a/quantify_strand_bias/nextflow.config
+++ b/quantify_strand_bias/nextflow.config
@@ -8,11 +8,20 @@ params {
   outdir       = "$baseDir/results/"
   refseq_dir   = "$baseDir/refseq/"
 
+  // // this directory contains R package tar.gz files
+  // R_tar_dir             = "../lib/R/"
+
+  // what additional R packages do we need to install on top of tidyverse?
+  R_packages                = "rstatix ggpubr"
+
+  // a directory with some additional common R scripts
+  R_shared_script_dir       = "../scripts/"
+
   // create hard links of output files in results folder
   publish_dir_mode          = "link"
 
   // a sample sheet that maps sample IDs to fasta files with refseqs
-  mappsing_sample_sheet     = null
+  // mapping_sample_sheet      = null
 
   // pattern to match for fastq files
   fastq_pattern             = "*_R[12]*.fastq*"
@@ -40,8 +49,9 @@ params {
 
   genome_fasta           = null
   genome_annotation_gtf  = null
-  metadata               = "${params.refseq_dir}/metadata.csv"
-  refseq_metadata        = "${baseDir}/virus_refseq/refseq_metadata.csv"
+  // directory with metadata files
+  metadata_dir           = "../metadata/"
+  refseq_metadata        = "${params.metadata_dir}/virus_refseq_metadata.csv"
   transcriptome_fasta    = "${params.refseq_dir}/Drosophila_melanogaster.BDGP6.32.cdna.all.fa.gz"
   rRNA_fasta             = "${params.refseq_dir}/rRNA_locus.fa"
 
