--- a/quantify_strand_bias/conf/modules.config
+++ b/quantify_strand_bias/conf/modules.config
@@ -54,3 +54,15 @@ process {
   }
 }
 
+
+// SAVE_OUTPUT_FILE 
+process {
+    withName: 'SAVE_OUTPUT_FILE*' {
+        publishDir = [
+            [
+                path: { "${params.outdir}" },
+                mode: params.publish_dir_mode
+            ]
+        ]
+    }
+}
