updates for paper

--- a/quantify_strand_bias/nextflow.config
+++ b/quantify_strand_bias/nextflow.config
@@ -12,7 +12,7 @@ params {
   // R_tar_dir             = "../lib/R/"
 
   // what additional R packages do we need to install on top of tidyverse?
-  R_packages                = "rstatix ggpubr"
+  R_packages                = "rstatix ggpubr patchwork"
 
   // a directory with some additional common R scripts
   R_shared_script_dir       = "../scripts/"
